# workflow-engine-rs

./: .dockerignore  .env.example  .env.template  .env.test  .gitignore  BRANCH_DOCUMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  DEVELOPMENT_SETUP.md  DEVOPS_SETUP_REPORT.md  DOCUMENTATION_ORGANIZATION.md  Dockerfile  Dockerfile.dev  Dockerfile.efficient  Dockerfile.simple  FEDERATION_BRANCH_FEATURES.md  FEDERATION_SUMMARY.md  GRAPHQL_FEDERATION.md  LICENSE  MAIN_BRANCH_UPDATE_INSTRUCTIONS.md  OPEN_SOURCE_RELEASE_READY.md  PUBLICATION_READINESS_REPORT.md  QUICK_START.md  QUICK_START_VERIFICATION_CHECKLIST.md  README.md  SECURITY.md  SETUP_VERIFICATION_REPORT.md  SYSTEM_TESTING.md  TEST_COVERAGE_REPORT.md  TODO_CODE_OF_CONDUCT.md  TROUBLESHOOTING_ADDENDUM.md  build-debug-docker.sh  check-docker-status.sh  debug-build.sh  deny.toml  deny.toml.backup  docker-cleanup.sh  (+27 more)
crates/workflow-engine-api/: CLAUDE.md  Cargo.toml  README.md
crates/workflow-engine-api/src/: lib.rs
crates/workflow-engine-api/src/api/: auth.rs  events.rs  health.rs  login.rs  metrics.rs  metrics_simple.rs  mod.rs  openapi.rs  rate_limit.rs  startup.rs  uptime.rs  workflows.rs
crates/workflow-engine-api/src/bootstrap/: config.rs  discovery.rs  health.rs  lifecycle.rs  manager.rs  mod.rs  registry.rs  service.rs
crates/workflow-engine-api/src/db/: connection_pool.rs  event.rs  event_driven_sync.rs  repository.rs  service_isolation.rs  session.rs  tenant.rs  user.rs
crates/workflow-engine-api/src/integrations/: cross_system.rs
crates/workflow-engine-api/src/monitoring/: metrics.rs
crates/workflow-engine-api/src/testing/: mocks.rs  mod.rs
crates/workflow-engine-api/src/workflows/: customer_support_workflow.rs  event_integration.rs  executor.rs  mod.rs  (+3 more)
crates/workflow-engine-app/: .crate-ignore  CLAUDE.md  Cargo.toml  README.md
crates/workflow-engine-app/src/: config.rs  main.rs  main.rs.backup
crates/workflow-engine-core/: CLAUDE.md  Cargo.toml  README.md
crates/workflow-engine-core/src/: lib.rs  mod.rs  task.rs
crates/workflow-engine-core/tests/: clippy_large_error_test.rs  graphql_query_validation_test.rs  mcp_protocol_validation_focused_test.rs  node_parameter_type_safety_test.rs  simple_graphql_test.rs  workflow_configuration_validation_test.rs
crates/workflow-engine-gateway/: CLAUDE.md  Cargo.toml  README.md
crates/workflow-engine-gateway/examples/: federated_query.rs  test_federation.rs  validate_federation.rs
crates/workflow-engine-gateway/src/: config.rs  error.rs  gateway.rs  health.rs  lib.rs  main.rs  subgraph.rs
crates/workflow-engine-gateway/tests/: README.md  federation_config_test.rs  gateway_test.rs  integration_tests.rs  test_utils.rs
crates/workflow-engine-mcp/: CLAUDE.md  Cargo.toml  README.md
crates/workflow-engine-mcp/src/: config.rs  config_builder.rs  connection_pool.rs  health.rs  lib.rs  load_balancer.rs  metrics.rs  mod.rs  protocol.rs  transport.rs
crates/workflow-engine-nodes/: CLAUDE.md  Cargo.toml  README.md
crates/workflow-engine-nodes/src/: external_config.rs  external_mcp.rs  external_mcp_client.rs  lib.rs  research.rs  template.rs  utils.rs
examples/01-getting-started/: Cargo.toml  README.md  basic-nodes.rs  data-flow.rs  hello-world.rs  simple-pipeline.rs
examples/01_basic_workflow/: Cargo.toml  README.md
examples/01_basic_workflow/examples/: advanced.rs  basic.rs  error_handling.rs
examples/01_basic_workflow/src/: lib.rs  main.rs
examples/01_basic_workflow/tests/: integration_test.rs
examples/02_mcp_integration/: Cargo.toml  README.md
examples/03-ai-integration/: Cargo.toml  README.md  anthropic-agent.rs  multi-model.rs  openai-agent.rs
examples/04-mcp-integration/: Cargo.toml  README.md
examples/customer-support/: Cargo.toml  README.md
examples/customer-support/data/: test_tickets.json
examples/customer-support/src/: main.rs
services/content_processing/: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md
services/content_processing/docs/: API.md  DATA_MODELS.md  DEPLOYMENT.md
services/content_processing/migrations/: 20241209_000001_create_content_metadata.sql  20241209_000002_create_processing_jobs.sql  20241209_000003_create_plugin_registry.sql  README.md
services/content_processing/src/: ai_integration.rs  api.rs  api_rest.rs  db.rs  lib.rs  main.rs  models.rs  processor.rs  traits.rs
services/content_processing/tests/: graphql_federation_test.rs
services/knowledge_graph/: AGENT_C_REVIEW_REPORT.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.test.yml
services/knowledge_graph/dgraph/: .env.example  README.md  docker-compose.yml  init-schema.sh  schema.graphql
services/knowledge_graph/docs/: ALGORITHMS.md  API.md
services/knowledge_graph/examples/: mutation_parser_demo.rs  parser_demo.rs
services/knowledge_graph/scripts/: run-integration-tests.sh  test-dgraph-setup.sh  test-dgraph-teardown.sh
services/knowledge_graph/src/: algorithms.rs  api.rs  error.rs  graceful_degradation.rs  graph.rs  lib.rs  main.rs  query.rs  service.rs
services/knowledge_graph/test-data/: sample-data.json  test-schema.graphql
services/knowledge_graph/tests/: graphql_federation_test.rs  integration_test.rs
services/realtime_communication/: AGENT_B_CODE_REVIEW_REPORT.md  CLAUDE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md
services/realtime_communication/docs/: ACTORS.md  CONFIGURATION.md  PROTOCOL.md
services/realtime_communication/src/: actor.rs  api.rs  connection.rs  lib.rs  main.rs  messaging.rs  notifications.rs  persistence.rs  presence.rs  server.rs  session.rs
services/realtime_communication/tests/: actor_tests.rs  graphql_federation_test.rs  integration_tests.rs  mod.rs  notification_tests.rs  performance_tests.rs  persistence_tests.rs  presence_tests.rs
test-runner/: .gitignore  README.md  UV-QUICKSTART.md  install.sh  migrate.py  pyproject.toml  test-config.example.yaml
test-runner/src/test_runner/: __init__.py  cli.py  config.py  runner.py
test-runner/tests/: __init__.py  test_config.py  test_runner.py
(+797 files in other folders)
