[package]
name = "workflow-engine-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Main application binary for AI workflow engine"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/workflow-engine-app"
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "workflow-engine"
path = "src/main.rs"

[features]
default = ["full"]
full = [
    "workflow-engine-core/full",
    "workflow-engine-api/default",
    "database",
    "monitoring"
]
database = ["workflow-engine-core/database", "workflow-engine-api/database"]
monitoring = ["workflow-engine-core/monitoring", "workflow-engine-api/monitoring"]

[dependencies]
# Core workspace crates
workflow-engine-core = { path = "../workflow-engine-core", version = "0.6.0", features = ["full"] }
workflow-engine-api = { path = "../workflow-engine-api", version = "0.6.0", features = ["default"] }

# Runtime dependencies
dotenvy = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# No dev-dependencies needed for app binary