[package]
name = "getting-started-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
workflow-engine-core = { path = "../../crates/workflow-engine-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[[bin]]
name = "hello-world"
path = "hello-world.rs"

[[bin]]
name = "basic-nodes"
path = "basic-nodes.rs"

[[bin]]
name = "data-flow"
path = "data-flow.rs"

[[bin]]
name = "simple-pipeline"
path = "simple-pipeline.rs"