[package]
name = "basic_workflow_example"
version = "0.1.0"
edition = "2021"
description = "Basic workflow creation and execution example"

[[bin]]
name = "basic_workflow"
path = "src/main.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "advanced"
path = "examples/advanced.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[dependencies]
# Core workflow engine dependencies
workflow-engine-core = { path = "../../crates/workflow-engine-core", features = ["monitoring"] }
workflow-engine-nodes = { path = "../../crates/workflow-engine-nodes" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.11"

# Integration testing
reqwest = { version = "0.11", features = ["json"] }