[package]
name = "customer-support-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "customer-support-demo"
path = "src/main.rs"

[dependencies]
workflow-engine-api = { path = "../../crates/workflow-engine-api" }
workflow-engine-core = { path = "../../crates/workflow-engine-core" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
clap = "2"
env_logger = "0.10"