[package]
name = "knowledge_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3"

# Web framework
actix-web = { version = "4.11.0", features = ["macros"] }
actix-cors = "0.7.1"

# Graph database client
dgraph-tonic = "0.11"
tonic = "0.11"
reqwest = { version = "0.11", features = ["json"] }

# Database drivers
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "json", "uuid", "chrono"] }
pgvector = { version = "0.3", features = ["sqlx"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Caching
redis = { version = "0.23", features = ["aio", "tokio-comp"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.12"

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-otlp = "0.14"

# Metrics
prometheus = "0.13.4"

# Utilities
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12.1"